feat: add lazy rewrites and news media
